--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/golf-and-flag.ico">
 </head>
 <body>
   <golf-root></golf-root>
